syntax = "proto3";

package resources.jobs;

import "resources/jobs/colleagues.proto";
import "resources/timestamp/timestamp.proto";
import "validate/validate.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/jobs;jobs";

enum ConductType {
  CONDUCT_TYPE_UNSPECIFIED = 0;
  CONDUCT_TYPE_NEUTRAL = 1;
  CONDUCT_TYPE_POSITIVE = 2;
  CONDUCT_TYPE_NEGATIVE = 3;
  CONDUCT_TYPE_WARNING = 4;
  CONDUCT_TYPE_SUSPENSION = 5;
  CONDUCT_TYPE_NOTE = 6;
}

message ConductEntry {
  uint64 id = 1; // @gotags: sql:"primary_key" alias:"id"
  optional resources.timestamp.Timestamp created_at = 2;
  optional resources.timestamp.Timestamp updated_at = 3;
  optional resources.timestamp.Timestamp deleted_at = 4;
  string job = 5 [(validate.rules).string.max_len = 20];
  ConductType type = 6 [(validate.rules).enum.defined_only = true];
  // @sanitize
  string message = 7 [(validate.rules).string = {min_len: 3, max_len: 2048}];
  optional resources.timestamp.Timestamp expires_at = 8;
  int32 target_user_id = 9 [(validate.rules).int32.gt = 0];
  optional resources.jobs.Colleague target_user = 10; // @gotags: alias:"target_user"
  int32 creator_id = 11 [(validate.rules).int32.gt = 0];
  optional resources.jobs.Colleague creator = 12; // @gotags: alias:"creator"
}
