syntax = "proto3";

package services.jobs;

import "buf/validate/validate.proto";
import "resources/common/database/database.proto";
import "resources/jobs/conduct.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/services/jobs;jobs";

// Conduct Register

message ListConductEntriesRequest {
  resources.common.database.PaginationRequest pagination = 1 [(buf.validate.field).required = true];
  optional resources.common.database.Sort sort = 2;
  // Search params
  repeated resources.jobs.ConductType types = 3;
  optional bool show_expired = 4;
  repeated int32 user_ids = 5;
  repeated uint64 ids = 6;
}

message ListConductEntriesResponse {
  resources.common.database.PaginationResponse pagination = 1;
  repeated resources.jobs.ConductEntry entries = 2;
}

message CreateConductEntryRequest {
  resources.jobs.ConductEntry entry = 1 [(buf.validate.field).required = true];
}

message CreateConductEntryResponse {
  resources.jobs.ConductEntry entry = 1;
}

message UpdateConductEntryRequest {
  resources.jobs.ConductEntry entry = 1 [(buf.validate.field).required = true];
}

message UpdateConductEntryResponse {
  resources.jobs.ConductEntry entry = 1 [(buf.validate.field).required = true];
}

message DeleteConductEntryRequest {
  uint64 id = 1;
}

message DeleteConductEntryResponse {}

service ConductService {
  // @perm: Attrs=Access/StringList:[]string{"Own", "All"}
  rpc ListConductEntries(ListConductEntriesRequest) returns (ListConductEntriesResponse);
  // @perm
  rpc CreateConductEntry(CreateConductEntryRequest) returns (CreateConductEntryResponse);
  // @perm
  rpc UpdateConductEntry(UpdateConductEntryRequest) returns (UpdateConductEntryResponse);
  // @perm
  rpc DeleteConductEntry(DeleteConductEntryRequest) returns (DeleteConductEntryResponse);
}
